testsuite/poke.pkl/try-catch-diag-3.pk
/* { dg-do compile } */

fun foo = (Exception e) int:
  {
   try
     raise e;
   catch if "foo" /* { dg-error "" } */
   {
     print ("caught\n");
   }

   return 0;
  }

fun bar = (Exception e) int:
  {
   try
     return foo (e);
   catch
   {
     print ("uncaught\n");
   }

   return 0;
  }
